@@ -328,13 +328,13 @@ void addToState (lua_State *L)
       .addFunction ("__add", &A::operator+)
       .addData ("testProp", &A::testProp)
       .addProperty ("testProp2", &A::testPropGet, &A::testPropSet)
-      .addStaticMethod ("testStatic", &A::testStatic)
+      .addStaticFunction ("testStatic", &A::testStatic)
       .addStaticData ("testStaticProp", &A::testStaticProp)
       .addStaticProperty ("testStaticProp2", &A::testStaticPropGet, &A::testStaticPropSet)
     .endClass ()
     .deriveClass <B, A> ("B")
       .addConstructor <void (*) (const string &), RefCountedPtr <B> > ()
-      .addStaticMethod ("testStatic2", &B::testStatic2)
+      .addStaticFunction ("testStatic2", &B::testStatic2)
     .endClass ()
     .addFunction ("testParamAPtr", &testParamAPtr)
     .addFunction ("testParamAPtrConst", &testParamAPtrConst)
